im centering + adding a row to fix the spacing

--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ li {
 .row {
   width: 100%;
   max-width: 1300px;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
